--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --background-color: #33393f;
     --color: #e0eae4;
-    --heading-color: #e866ec;
+    --heading-color: rgb(0, 179, 214)
 }
 
 html {
@@ -164,8 +164,8 @@ footer {
     color: var(--gin);
     border-radius: 8px;
     /* use linear-gradient() function to create a fading background  */
-    background-image: linear-gradient(rgba(232, 102, 236, 0.3) 0%,
-            rgba(232, 102, 236, 0.6) 100%);
+    background-image: linear-gradient(rgba(126, 102, 236, 0.3) 0%,
+            rgba(0, 179, 214, 0.6) 100%);
     display: flex;
     align-items: center;
 
